Changed z-index of navbar for phone to correct display issue

--- a/src/Nav.css
+++ b/src/Nav.css
@@ -25,6 +25,7 @@ nav.phone {
   transition: left 1s ease;
   text-align: center;
   margin: 0;
+  z-index: 1;
   ul {
     list-style: none;
     display: flex;
@@ -36,7 +37,7 @@ nav.phone {
 
   &.active {
     display: inline;
-    z-index: 0;
+    z-index: 1;
     width: 100vw;
     left: 0;
   }
